syntax = "proto3";

package database;

import "google/protobuf/timestamp.proto";

// Database service for client-to-coordinator communication
service DatabaseService {
  // Execute a SQL query
  rpc ExecuteQuery(QueryRequest) returns (QueryResponse);
  
  // Key-value operations
  rpc Get(GetRequest) returns (GetResponse);
  rpc Put(PutRequest) returns (PutResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Scan(ScanRequest) returns (ScanResponse);
}

// SQL query request
message QueryRequest {
  string query = 1;
  map<string, string> parameters = 2;
}

// SQL query response
message QueryResponse {
  bool success = 1;
  string error = 2;
  repeated Row rows = 3;
  uint64 affected_rows = 4;
}

// Row in a result set
message Row {
  repeated Value values = 1;
}

// Value in a row
message Value {
  oneof value {
    string string_value = 1;
    int64 int_value = 2;
    double float_value = 3;
    bool bool_value = 4;
    bytes blob_value = 5;
    google.protobuf.Timestamp timestamp_value = 6;
    bool null_value = 7;
  }
}

// Get request
message GetRequest {
  string key = 1;
}

// Get response
message GetResponse {
  bool found = 1;
  bytes value = 2;
  string error = 3;
}

// Put request
message PutRequest {
  string key = 1;
  bytes value = 2;
}

// Put response
message PutResponse {
  bool success = 1;
  string error = 2;
}

// Delete request
message DeleteRequest {
  string key = 1;
}

// Delete response
message DeleteResponse {
  bool success = 1;
  string error = 2;
}

// Scan request
message ScanRequest {
  string start_key = 1;
  string end_key = 2;
  int32 limit = 3;
}

// Scan response
message ScanResponse {
  repeated KeyValue items = 1;
  string error = 2;
}

// Key-value pair
message KeyValue {
  string key = 1;
  bytes value = 2;
}

