//! Implementation of the database service.

use tonic::{Request, Response, Status};
use crate::proto::database::{
    database_service_server::{DatabaseService, DatabaseServiceServer},
    QueryRequest, QueryResponse, GetRequest, GetResponse,
    PutRequest, PutResponse, DeleteRequest, DeleteResponse,
    ScanRequest, ScanResponse, KeyValue,
};
use std::sync::Arc;
use tokio::sync::Mutex;

/// Database service implementation.
pub struct DatabaseServiceImpl {
    // Service state will go here
}

impl DatabaseServiceImpl {
    /// Create a new database service.
    pub fn new() -> Self {
        Self {}
    }

    /// Create a new server with this service.
    pub fn into_server(self) -> DatabaseServiceServer<Self> {
        DatabaseServiceServer::new(self)
    }
}

#[tonic::async_trait]
impl DatabaseService for DatabaseServiceImpl {
    async fn execute_query(
        &self,
        request: Request<QueryRequest>,
    ) -> Result<Response<QueryResponse>, Status> {
        // Implementation will go here
        Err(Status::unimplemented("Not yet implemented"))
    }

    async fn get(
        &self,
        request: Request<GetRequest>,
    ) -> Result<Response<GetResponse>, Status> {
        // Implementation will go here
        Err(Status::unimplemented("Not yet implemented"))
    }

    async fn put(
        &self,
        request: Request<PutRequest>,
    ) -> Result<Response<PutResponse>, Status> {
        // Implementation will go here
        Err(Status::unimplemented("Not yet implemented"))
    }

    async fn delete(
        &self,
        request: Request<DeleteRequest>,
    ) -> Result<Response<DeleteResponse>, Status> {
        // Implementation will go here
        Err(Status::unimplemented("Not yet implemented"))
    }

    async fn scan(
        &self,
        request: Request<ScanRequest>,
    ) -> Result<Response<ScanResponse>, Status> {
        // Implementation will go here
        Err(Status::unimplemented("Not yet implemented"))
    }
}